Import of KAARE/Role-Pg-Roles-0.002 from CPAN.
gitpan-cpan-distribution: Role-Pg-Roles
gitpan-cpan-version:      0.002
gitpan-cpan-path:         KAARE/Role-Pg-Roles-0.002.tar.gz
gitpan-cpan-author:       KAARE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -26,6 +26,7 @@ requires:
   DBI: '0'
   Digest::MD5: '0'
   Moose::Role: '0'
+  perl: '5.010'
 resources:
   repository: git://github.com/kaare/Role-Pg-Roles.git
-version: '0.001'
+version: '0.002'
